--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "tsc -p .",
     "local": "npm i -g && pizza",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
-    "cli": "yarn build && node ./lib/index.js"
+    "cli": "yarn build && node ./lib/index.js",
+    "lint": "eslint ./src/**/*.ts",
+    "lint:fix": "eslint ./src --fix"
   },
   "keywords": [
     "FHIR",
@@ -32,7 +34,13 @@
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
     "@types/node": "^16.4.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
