--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES2021",
         "module": "commonjs",
         "lib": [
-            "es6",
-            "es2015",
+            "ES2021",
             "dom"
         ],
         "declaration": true,
