--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@asrour/myFHIR",
+  "name": "@asrour/myfhir",
   "version": "0.1.0",
   "description": "Generates FHIR mysql database from file definitions",
   "main": "dist/index.js",
@@ -14,7 +14,8 @@
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
     "cli": "yarn build && node ./lib/index.js",
     "lint": "eslint ./src/**/*.ts",
-    "lint:fix": "eslint ./src --fix"
+    "lint:fix": "eslint ./src --fix",
+    "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "keywords": [
     "FHIR",
@@ -31,16 +32,23 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.21",
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^9.1.0",
     "nodemon": "^2.0.12",
+    "nyc": "^15.1.0",
     "prettier": "^2.3.2",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
