--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cli": "yarn build && node ./lib/index.js",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "eslint ./src --fix",
-    "test": "mocha -r ts-node/register src/**/*.test.ts"
+    "test": "jest --coverage"
   },
   "keywords": [
     "FHIR",
@@ -25,31 +25,28 @@
   "author": "Abdul-rahman M. Srour <3bd.srour@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.0.1",
     "clear": "^0.1.0",
-    "commander": "^8.1.0",
+    "commander": "^9.3.0",
     "figlet": "^1.5.0",
+    "jest": "^28.1.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@testdeck/mocha": "^0.1.2",
-    "@types/chai": "^4.2.21",
+    "@types/jest": "^28.1.1",
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.4.13",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
+    "@types/node": "^17.0.42",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "mocha": "^9.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.12",
-    "nyc": "^15.1.0",
     "prettier": "^2.3.2",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.1.0",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.3.5"
   }
 }
