--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "rootDir": "src",
         "strict": true,
         "types": [
-            "mocha",
+            "jest",
             "node"
         ],
         "esModuleInterop": true,
