--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@asrour/myfhir",
   "version": "0.1.0",
-  "description": "Generates FHIR mysql database from file definitions",
+  "description": "Generates FHIR for MySQL database from file definitions",
   "main": "dist/index.js",
   "bin": {
-    "myFHIR": "./dist/index.js"
+    "myfhir": "./dist/index.js"
   },
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "create": "yarn build && yarn test",
     "build": "tsc -p .",
-    "local": "npm i -g && myFHIR",
+    "local": "npm i -g && myfhir",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
     "cli": "yarn build && node ./lib/index.js",
     "lint": "eslint ./src/**/*.ts",
@@ -20,7 +20,9 @@
   "keywords": [
     "FHIR",
     "nodejs",
-    "mysql"
+    "MySQL",
+    "mysql",
+    "hl7"
   ],
   "author": "Abdul-rahman M. Srour <3bd.srour@gmail.com>",
   "license": "MIT",
