--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "create": "yarn build && yarn test",
     "build": "tsc -p .",
-    "local": "npm i -g && myfhir",
+    "local": "npm i --location=global && myfhir",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
-    "cli": "yarn build && node ./lib/index.js",
+    "cli": "yarn build && node ./dist/index.js",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "eslint ./src --fix",
     "test": "jest --coverage"
@@ -50,5 +50,6 @@
     "ts-node": "^10.1.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.3.5"
-  }
+  },
+  "type": "module"
 }
