--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "target": "ES2021",
-        "module": "commonjs",
+        "target": "ES2022",
+        "module": "ES2022",
         "lib": [
-            "ES2021",
+            "ES2022",
             "dom"
         ],
         "declaration": true,
@@ -15,7 +15,8 @@
             "node"
         ],
         "esModuleInterop": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "moduleResolution": "Node"
     },
     "exclude": [
         "./src/**/*.test.ts",
